# cabrita

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  versions.py
$HOME/.geru/: status.yml
.circleci/: config.yml
.github/workflows/: pre_commit.yml  publish.yml  pull_request.yml
.run/: Run Dashboard v2.run.xml  Run Pre-Commit.run.xml  Run Sphinx.run.xml  Run Tests.run.xml
cabrita/: __init__.py  __main__.py  command.py  dash.py  dashboard.py  dashing.py  gui.py  parser.py  run.py  testpool.py  utils.py  versions.py
cabrita/abc/: __init__.py  base.py  files.py  utils.py
cabrita/commands/: __init__.py  dash.py
cabrita/components/: __init__.py  box.py  compose.py  config.py  dashboard.py  docker.py  git.py  inspect.py  watchers.py
cabrita/core/: info.py  parser.py  services.py  status.py  utils.py
cabrita/docker/: __init__.py  dash.py
cabrita/old/: __init__.py  __main__.py  dash.py  run.py
cabrita/old/core/: parser.py  services.py  status.py
cabrita/tests/: __init__.py  test_base.py  test_box.py  test_compose.py  test_config.py  test_configTemplate.py  test_config_v0.py  test_config_v1.py  test_config_v2.py  test_dashboard.py  test_dockerComposeWatch.py  test_dockerInspect.py  test_gitInspect.py  test_run.py  test_systemWatch.py  test_userWatch.py  test_utils.py  test_versions.py  test_watch.py
docs/: Makefile  api_cabrita.rst  api_components.rst  conf.py  file_reference.rst  index.rst  introduction.rst  make.bat  reference.rst  tutorial.rst
examples/: cabrita.yml  docker-compose.override.yml  docker-compose.yml
examples/config/: cabrita-v1.yml  cabrita-v2.yml
examples/django_app/: Dockerfile_dev
examples/django_app/DjangoApp/: apps.py
examples/django_app/django_app/: celery.py  settings.py  urls.py
examples/flask_app/: Dockerfile
source/: api_abc.rst  conf.py  index.rst  reference.rst
